--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation project(path: ':mvp')
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+    implementation 'com.github.XingRay:RecyclerAdapter:2.0.1'
 }
